# SurvivalGame-CreateYourWolf

./: CMakeLists.txt  README.md  build.sh
include/: animal.h  attack_strategy.h  control.h  dllist.h  move_strategy.h  sllist.h
src/: animal.c  animal.h  attack_strategy.c  control.c  footer.c  footer.h  header.c  header.h  main.c  move_strategy.c  utils.c  utils.h
